class to className and bottom of cards list cut off issue

--- a/src/screens/home/styles.css
+++ b/src/screens/home/styles.css
@@ -24,8 +24,9 @@
 }
 .cardsContainer {
     flex: 1;
-    height: 100vh;
+    height: 90vh;
     margin-top: 2%;
+    padding-bottom: 20%;
     overflow: scroll;
     position: relative;
     z-index: 1;
